Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
-
None
-
None
Description
Problem occurs when reading a nested column with repeated values, specially when there is much more levels in that column than the number of global rows.
Citing @peshopetrov, who filed a github pull request identifying the problem and proposing a fix:
Nested repeated columns' count is incorrectly read from row group's metadata. That's correct in cases where there aren't any nested repeated fields but is generally not correct. Instead the num_values from the column's metadata should be used.
Attachments
Issue Links
- blocks
-
PARQUET-713 parquet-cpp 1.0.0 release
- Resolved