PARQUET-895: Fix broken reading of nested repeated columns

Use the column metadata to get the number of levels to process. It
fixes a problem where not enough values are returned in the case
of nested repeated values.

@peshopetrov should get the credit for 1st attempt

Closes #250

Change-Id: I1cc441557b8fb0819f7c6318a92d3dde998f329c